<?xml version="1.0"?>
<package format="2">
    <name>ig_handle</name>
    <version>0.0.3</version>
    <description>This package contains all necessary code to operate ig_handle.</description>
    <maintainer email="gearle@uwaterloo.ca">Gabe Earle</maintainer>
    <license>BSD</license>
    <author>gearle@uwaterloo.ca</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nodelet</depend>
    <depend>actionlib</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>actionlib_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
