<?xml version="1.0"?>
<package format="2">
    <name>ig_handle</name>
    <version>1.0.0</version>
    <description>This package contains all necessary code to operate ig_handle.</description>
    <license>BSD</license>
    <author>gearle@uwaterloo.ca</author>
    <maintainer email="adthoms@ucla.edu">Alex Thoms</maintainer>
    <maintainer email="gearle@uwaterloo.ca">Gabe Earle</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
</package>
